# tensorpeek

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.ja.md  README.md  README.zh.md
docs/: output-schema.md
examples/: README.md  gen_fixtures.rs  shape-gate.sh
scripts/: smoke.sh
src/: builder.rs  cli.rs  gguf.rs  inflate.rs  json.rs  lib.rs  main.rs  npy.rs  npz.rs  render.rs  report.rs  safetensors.rs  sniff.rs
tests/: cli.rs
