[package]
name = "tensorpeek"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["JaydenCJ"]
description = "One zero-dependency CLI that inspects safetensors, GGUF, npy and npz headers as JSON — tensor shapes without the 2 GB framework install."
license = "MIT"
repository = "https://github.com/JaydenCJ/tensorpeek"
keywords = ["safetensors", "gguf", "numpy", "cli", "inspector"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# none — tensorpeek is std-only by design; even the DEFLATE decoder for
# compressed .npz members is implemented in-repo (src/inflate.rs).

[profile.release]
strip = true
lto = true
